finished hw 10 final hw

--- a/homeworks/hw10/index.html
+++ b/homeworks/hw10/index.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+<head>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+</head>
+<body>
+<title>Dress Drizzy</title>
+<div id="title">Dress Drizzy</div>
+<div id="drake-container">
+	<img class="starter" id="head" src="assets/img/drake.svg">
+	<img class="starter" id="body" src="assets/img/body.svg">
+	<img class="outfit" id="o1" src="assets/img/outfit1.svg">
+	<img class="outfit" id="o2" src="assets/img/outfit2.svg">
+	<img class="outfit" id="o3" src="assets/img/outfit3.svg">
+	<img class="outfit" id="o4" src="assets/img/outfit4.svg">
+	<img class="outfit" id="o5" src="assets/img/outfit5.svg">
+</div>
+
+<div id="selection-container">
+	<img class="outfit-selection" id="s1" src="assets/img/outfit1.jpeg">
+	<img class="outfit-selection" id="s2" src="assets/img/outfit2.jpeg">
+	<img class="outfit-selection" id="s3" src="assets/img/outfit3.jpeg">
+	<img class="outfit-selection" id="s4" src="assets/img/outfit4.jpeg">
+	<img class="outfit-selection" id="s5" src="assets/img/outfit5.jpeg">
+</div>
+
+<div id="strip-button" class="button">
+	Strip Me
+</div>
+
+<a href="design_responses.html" target="_blank">
+	<div id="design-responses" class="button">
+		Design Responses
+	</div>
+</a>
+
+</body>
+
+<script src="assets/script/script.js"></script>
 </html>
