finished final project

--- a/final/index.html
+++ b/final/index.html
@@ -47,7 +47,7 @@
         <h4>Number of Years: &nbsp<input type="integer" id="myText3" value="10">
           <span class="tooltiptext">This is the number of years you will keep your money invested.</span>
         </h4>
-        <button id= "submit_button" onclick="Submit()">Submit</button>
+        <button id= "submit_button" onclick="Submit()">Simulate</button>
         <div id= "graph-box" class="graph-container">
         </div>
         <h3 id="end_amount">End Amount: ?</h3>
